--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mihanizm56/webpack-module-watcher",
-  "version": "0.0.1-beta.3",
+  "version": "1.0.0",
   "description": "webpack utils",
   "license": "MIT",
   "main": "lib/index.js",
